syntax = "proto3";  
//option csharp_namespace = "CSharpServerGenerated";  
package CSharpServerGenerated;

// The helloword service definition.
service helloAkash {
  // Sends a hello
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}